# fibonacci-toy-website

./: .gitattributes  README.md  WEBSITE-LICENSES.txt  biome.json  cSpell.json  index.html  package-lock.json  package.json  rsbuild.config.ts
.github/workflows/: webpage.yml
fibonacci-toy-rs-4-web/: Cargo.toml  README.md
fibonacci-toy-rs-4-web/src/: lib.rs
fibonacci-toy-rs-4-web/tests/: web.rs
other/: WEBSITE-LICENSES.txt
public/: WEBSITE-LICENSES.txt  robots.txt
src/: App.css  algorithms.ts  fib-output.ts  fibonacci-linear.ts  footer.ts  index.html  index.ts  input.ts  int-input.ts  progress.ts  state.ts  style.sass  textarea-with-copy.ts  worker.ts
src/calculation/: calculation-mode.ts  fibonacci-linear-js.ts  worker-util.ts  worker.ts
src/components/: footer.ts  input.ts  output.ts
src/types/: FibonacciAlgorithm.ts  common.ts
static/css/: 172.283f56f3.css  172.2937a95b.css  172.4debc13d.css  172.d0e72aac.css  481.954f5891.css
static/js/: 172.46cc6f6b.js  index.085b97e3.js  index.0cf95746.js  index.2570607e.js  index.2992bcf2.js  index.2ffa340e.js  index.6765539f.js  index.a3635de9.js  index.b99d1213.js  index.c45da8da.js  index.da254406.js  index.f273a6da.js  index.f7f4f3bf.js  index.fe0b8c40.js  npm.beercss.f5682d24.js  npm.hyperapp.7b34bf6f.js  npm.material-dynamic-colors.7b465e7f.js
static/js/async/: 588.0974e898.js  588.2e35c982.js  588.3bc2624e.js  (+8 more)
static/wasm/: 58ee007507df4b07.module.wasm  845c112bd64ab065.module.wasm  90bfd2cdeb7031cf.module.wasm  9d35f64ca176c312.module.wasm  c113b3751741c943.module.wasm  d1b22d362f4775da.module.wasm
