[package]
name = "fibonacci-toy-rs-4-web"
description = "Simple fibonacci solver for web."
version = "0.1.0"
repository = "https://github.com/WyvernIXTL/fibonacci-toy-website"
authors = ["Adam McKellar <dev@mckellar.eu>"]
license = "MPL-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
num-bigint = "0.4.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
